add network description & dataset

--- a/main.tex
+++ b/main.tex
@@ -6,6 +6,8 @@
     openany,
 ]{MastersThesis}
 
+\newcommand{\tabhead}[1]{\textbf{#1}}
+
 \usepackage[utf8]{inputenc} % Required for inputting international characters
 \usepackage[T1]{fontenc} % Output font encoding for international characters
 \usepackage{mathpazo} % Use the Palatino font by default
@@ -18,6 +20,7 @@
 
 \usepackage{amsmath}
 \usepackage[linesnumbered,ruled,vlined]{algorithm2e}
+\usepackage{svg}
 %----------------------------------------------------------------------------------------
 %	MARGIN SETTINGS
 %----------------------------------------------------------------------------------------
@@ -110,7 +113,7 @@
 \item Where I have consulted the published work of others, this is always clearly attributed.
 \item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work.
 \item I have acknowledged all main sources of help.
-\item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.\\
+\item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself.
 \end{itemize}
  
 \noindent Signed:\\
@@ -201,7 +204,7 @@ $N$ & resolution of point cloud (number of points in one cloud) \\
 \include{Chapters/02-Related-work} 
 \include{Chapters/03-research-hypothesis-and-problem}
 \include{Chapters/04-Methodology} 
-\include{Chapters/05-Dataset and evaluation} 
+\include{Chapters/05-Dataset-and-evaluation} 
 \include{Chapters/06-Experiments} 
 \include{Chapters/07-Conclusions} 
 
